fix: link contrast on light theme (#237)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -216,6 +216,12 @@ p {
   margin-bottom: 1rem;
 }
 
+.prose.theme-light a {
+  color: #690d7a;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  text-decoration: underline;
+}
+
 /* ---- SVG STYLES ----- */
 
 /* Radar */
